added basic health api's
