# api/models/healthModel.js
@@ -1,0 +1,15 @@
+// for live and readiness probe
+const mongoDBHelper = require('../helpers/mongoHelper');
+const components = [
+  {
+    name: 'mongoDB',
+    //   live: mongoDBHelper.ready,
+    ready: mongoDBHelper.ready
+  }
+];
+function getComponents() {
+  return components;
+}
+module.exports = {
+  getComponents: getComponents
+};
